<resources>
    <string name="app_name">SchoolManager</string>
    <string name="title_section1" translatable="false">Section 1</string>
    <string name="title_section2" translatable="false">Section 2</string>
    <string name="title_section3" translatable="false">Section 3</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_dialog_color_chooser">Dialog ColorChooser</string>
    <string name="title_activity_edit_subject">Edit subject</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_new_timetable">New Timetable</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_subjects_list">SubjectsListActivity</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="title_activity_homework">Homework</string>
    <string-array name="activity_titles">
        <item>Home</item>
        <item>Timetable</item>
        <item>Homework</item>
        <item>My School</item>
        <item>Settings</item>
    </string-array>
    <string-array name="SubjectNames">
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Sciences (Combined)</item>
        <item>German</item>
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Latin</item>
        <item>Greek</item>
        <item>History</item>
        <item>Geography</item>
        <item>Politics</item>
        <item>Religion</item>
        <item>Music</item>
        <item>Art</item>
        <item>Sport (PE)</item>
        <item>Project Course</item>
    </string-array>
    <string-array name="SubjectAbbreviations">
        <item>Ma</item>
        <item>Ph</item>
        <item>Ch</item>
        <item>Bio</item>
        <item>Sc</item>
        <item>Ge</item>
        <item>En</item>
        <item>Spa</item>
        <item>Fr</item>
        <item>La</item>
        <item>Gre</item>
        <item>Hi</item>
        <item>Geo</item>
        <item>Po</item>
        <item>Re</item>
        <item>Mu</item>
        <item>Art</item>
        <item>Sp</item>
        <item>Pro</item>
    </string-array>
    <string-array name="DayAbbreviations">
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
        <item>Su</item>
    </string-array>
    <string-array name="DayNames">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="DayIDs" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="PeriodNumbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="date_spinner_weeks">
        <item>In 1 week</item>
        <item>In 2 weeks</item>
        <item>In 3 weeks</item>
        <item>In 4 weeks</item>
        <item>In 5 weeks</item>
        <item>In 6 weeks</item>
        <item>In 7 weeks</item>
        <item>In 8 weeks</item>
        <item>In 9 weeks</item>
        <item>In 10 weeks</item>
    </string-array>
    <string-array name="subjects_txt_columns" translatable="false">
        <item>subjectName</item>
        <item>subjectAbbrev</item>
        <item>teacherName</item>
        <item>teacherAbbrev</item>
        <item>day1</item>
        <item>day2</item>
        <item>day3</item>
        <item>day4</item>
        <item>day5</item>
        <item>period11</item>
        <item>period21</item>
        <item>period31</item>
        <item>period41</item>
        <item>period51</item>
        <item>period12</item>
        <item>period22</item>
        <item>period32</item>
        <item>period42</item>
        <item>period52</item>
        <item>room1</item>
        <item>room2</item>
        <item>room3</item>
        <item>room4</item>
        <item>room5</item>
        <item>color</item>
        <item>textColor</item>
    </string-array>
    <string name="LinguisticSubjects">Linguistic subjects</string>
    <string name="MusicalAndArtisticSubjects">Music and Arts</string>
    <string name="Next">Next</string>
    <string name="OtherSubjects">Other subjects</string>
    <string name="ScienceSubjects">Science subjects</string>
    <string name="SocialSubjects">Social subjects</string>
    <string name="SubjectArt">Art</string>
    <string name="SubjectBiology">Biology</string>
    <string name="SubjectChemistry">Chemistry</string>
    <string name="SubjectEnglish">English</string>
    <string name="SubjectFrench">French</string>
    <string name="SubjectGeography">Geography</string>
    <string name="SubjectGerman">German</string>
    <string name="SubjectGreek">Greek</string>
    <string name="SubjectHistory">History</string>
    <string name="SubjectLatin">Latin</string>
    <string name="SubjectMathematics">Mathematics</string>
    <string name="SubjectMusic">Music</string>
    <string name="SubjectNWjg5u6">Sciences (combined)</string>
    <string name="SubjectPhysicalEducation">Sport (PE)</string>
    <string name="SubjectPhysics">Physics</string>
    <string name="SubjectPoliticsAndEconomics">Politics</string>
    <string name="SubjectReligion">Religion</string>
    <string name="SubjectSeminar">Project course</string>
    <string name="SubjectSpanish">Spanish</string>
    <string name="action_new_timetable">New timetable</string>
    <string name="action_settings">Settings</string>
    <string name="action_subjects_list">List of subjects</string>
    <string name="new_timetable_choose_subjects_header">Select your subjects</string>
    <string name="new_timetable_choose_subjects_text">Please select the subjects you want to add to your timetable\nIn the next step you can add further details about the respective subject such as your teachers, a color scheme for each subject and the time and place of your lessons.</string>
    <string name="pref_period10_end">10th period end</string>
    <string name="pref_title_periods">Period timing</string>
    <string name="pref_period10_end_summary">Set the time for the 10th period to end.</string>
    <string name="pref_period11_end">11th period end</string>
    <string name="pref_period12_end">12th period end</string>
    <string name="pref_period1_end">1st period end</string>
    <string name="pref_period2_end">2nd period end</string>
    <string name="pref_period3_end">3rd period end</string>
    <string name="pref_period4_end">4th period end</string>
    <string name="pref_period5_end">5th period end</string>
    <string name="pref_period6_end">6th period end</string>
    <string name="pref_period7_end">7th period end</string>
    <string name="pref_period8_end">8th period end</string>
    <string name="pref_period9_end">9th period end</string>
    <string name="pref_period11_start">11th period start</string>
    <string name="pref_period12_start">12th period start</string>
    <string name="pref_period1_start">1st period start</string>
    <string name="pref_period2_start">2nd period start</string>
    <string name="pref_period3_start">3rd period start</string>
    <string name="pref_period4_start">4th period start</string>
    <string name="pref_period5_start">5th period start</string>
    <string name="pref_period6_start">6th period start</string>
    <string name="pref_period7_start">7th period start</string>
    <string name="pref_period8_start">8th period start</string>
    <string name="pref_period9_start">9th period start</string>
    <string name="pref_period10_start">10th period start</string>
    <string name="pref_period11_end_summary">Set the time for the 11th period to end.</string>
    <string name="pref_period12_end_summary">Set the time for the 12th period to end.</string>
    <string name="pref_period1_end_summary">Set the time for the 1st period to end.</string>
    <string name="pref_period2_end_summary">Set the time for the 2nd period to end.</string>
    <string name="pref_period3_end_summary">Set the time for the 3rd period to end.</string>
    <string name="pref_period4_end_summary">Set the time for the 4th period to end.</string>
    <string name="pref_period5_end_summary">Set the time for the 5th period to end.</string>
    <string name="pref_period6_end_summary">Set the time for the 6th period to end.</string>
    <string name="pref_period7_end_summary">Set the time for the 7th period to end.</string>
    <string name="pref_period8_end_summary">Set the time for the 8th period to end.</string>
    <string name="pref_period9_end_summary">Set the time for the 9th period to end.</string>
    <string name="pref_period10_start_summary">Set the time for the 10th period to start.</string>
    <string name="pref_period11_start_summary">Set the time for the 11th period to start.</string>
    <string name="pref_period12_start_summary">Set the time for the 12th period to start.</string>
    <string name="pref_period1_start_summary">Set the time for the 1st period to start.</string>
    <string name="pref_period2_start_summary">Set the time for the 2nd period to start.</string>
    <string name="pref_period3_start_summary">Set the time for the 3rd period to start.</string>
    <string name="pref_period4_start_summary">Set the time for the 4th period to start.</string>
    <string name="pref_period5_start_summary">Set the time for the 5th period to start.</string>
    <string name="pref_period6_start_summary">Set the time for the 6th period to start.</string>
    <string name="pref_period7_start_summary">Set the time for the 7th period to start.</string>
    <string name="pref_period8_start_summary">Set the time for the 8th period to start.</string>
    <string name="pref_period9_start_summary">Set the time for the 9th period to start.</string>
    <string name="action_add_subject">Add subject</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_notification_lesson_start">Class notifications</string>
    <string name="pref_notification_lesson_start_description">Set if and when you want to be notified about the start of a lesson.</string>
    <string name="pref_title_timetable_settings">Timetable</string>
    <string name="pref_notification_settings_text">When do you want to be notified about the start of a lesson?</string>
    <string name="pref_notification_settings_never">Never</string>
    <string name="pref_notification_settings_minutes_before">minutes before</string>
    <string name="pref_notification_settings_wait_for_previous_to_end">Wait for previous lesson to end</string>
    <string name="pref_notification_settings_only_when_changing_rooms">Only when changing rooms</string>
    <string name="pref_title_periods_summary">Set start and end time of the timetable periods.</string>
    <string name="pref_title_my_school">My School</string>
    <string name="pref_my_school_select_school">Select your school</string>
    <string name="pref_my_school_select_school_description">Select your school for a more personalized experience.</string>
</resources>